	r62
- Changed the Auto posting feature to work through the "lightning icons":
 + Auto posting now shares the same posting parameters than "normal" posting
 + Items with Auto posting enabled will show the lightning icon in full color, those with Auto posting disabled show the lightning icon grayed out
 + You can toggle Auto posting for any item by left clicking on its lightning icon, either the one in the item list or the one next to the Post button
 + To Auto post all items with Auto posting enabled, right click on the lightning icon next to the Post button
 + Only items currently shown in the item list will be auto posted. That is, if an item has Auto posting enabled, but has been filtered out of the item list, it won't be auto posted.
	
	r61
- Rewritten, splitted in different libraries and many changes...

	Release 0.3.1
- Updated to Rift 1.9

	Release 0.3
- Updated to Rift 1.8

- Background scanner changes:
 + Scanning speed improved
 + The background scanner can be temporarily disabled now
 + Expiration times are estimated more accurately

- Post Tab changes:
 + Added extra info on the auction being posted
 + Added new pricing models & price matchers
 + Added score column that compares auction prices with the reference prices
 + Auctions are color coded by score
 
- New Auctions Tab:
 + Keeps track of all your characters' auctions
 + Shows competition for your posted auctions
 + The auction list is filterable to help you locate your auctions without having to scroll hundreds of pages
 + Faster auction cancelling functionality than the native AH window
 
- Other minor changes & features:
 + Added option to close the addon window when the native auction window is closed
 + Added status bar: Scan results & error messages are shown in the status bar now, instead of being dumped to the chat
 + The 'Hide item' filter has been improved: Now you can also hide items only for some characters
 + Items shown in the Post tab can be filtered by rarity now